--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <section id="home-sec">
       <div class="slideshow-container">
         <div class="mySlides fade">
-          <img src="slideImages/WhatsApp Image 2025-05-04 at 12.10.25_c1cade61.jpg" class="slideshow-img" alt="Slide 1">
+          <img src="WhatsApp Image 2025-05-04 at 12.10.25_c1cade61.jpg" class="slideshow-img" alt="Slide 1">
           <div class="text-container">
           <div class="text">
             Linda's Collection
@@ -41,7 +41,7 @@
           
         <!-- 
         <div class="mySlides fade">
-          <img src="slideImages/WhatsApp Image 2025-05-04 at 12.10.26_665e645b.jpg" class="slideshow-img change" alt="Slide 2">
+          <img src="WhatsApp Image 2025-05-04 at 12.10.26_665e645b.jpg" class="slideshow-img change" alt="Slide 2">
           <div class="text-container">
             <div class="text">
               Linda's Collection
@@ -54,7 +54,7 @@
             -->
         
         <div class="mySlides fade">
-          <img src="slideImages/IMG-20250507-WA0041.jpg" class="slideshow-img" alt="Slide 3">
+          <img src="IMG-20250507-WA0041.jpg" class="slideshow-img" alt="Slide 3">
            <div class="text-container">
           <div class="text">
             Linda's Collection
