--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="slideshow-container">
 
     <div class="mySlides">
-      <img src="slideImages/WhatsApp Image 2025-05-04 at 12.10.25_c1cade61.jpg"
+      <img src="WhatsApp Image 2025-05-04 at 12.10.25_c1cade61.jpg"
            class="slideshow-img" alt="Slide 1">
       <div class="text-container">
         <div class="text">Linda's Collection</div>
@@ -39,7 +39,7 @@
     </div>
 
     <div class="mySlides fade">
-      <img src="slideImages/IMG-20250507-WA0041.jpg"
+      <img src="IMG-20250507-WA0041.jpg"
            class="slideshow-img" alt="Slide 2">
       <div class="text-container">
         <div class="text">Linda's Collection</div>
@@ -50,7 +50,7 @@
     </div>
 
     <div class="mySlides fade">
-      <img src="slideImages/IMG-20250507-WA0042.jpg"
+      <img src="IMG-20250507-WA0042.jpg"
            class="slideshow-img" alt="Slide 3">
       <div class="text-container">
         <div class="text">Linda's Collection</div>
