--- a/index.html
+++ b/index.html
@@ -183,17 +183,17 @@
   <h2 class="section-title">Why Shop With Us</h2>
   <div class="value-grid">
     <div class="value-card">
-      <div class="value-icon">👗</div>
+      <div class="value-icon apparel-icon">👗</div>
       <h3>Curated Collections</h3>
       <p>Handpicked styles updated weekly from top designers</p>
     </div>
     <div class="value-card">
-      <div class="value-icon">🚚</div>
+      <div class="value-icon delivery-icon">🚚</div>
       <h3>Fast & Affordable Shipping</h3>
       <p>Free delivery on orders over ₦100,000</p>
     </div>
    <div class="value-card">
-  <div class="value-icon">📏</div>
+  <div class="value-icon tape-icon">📏</div>
   <h3>Size Assurance</h3>
   <p>Free exchanges if sizes don't fit perfectly</p>
 </div>
@@ -222,7 +222,7 @@
 
       <!-- Contact Details -->
       <div class="contact-card">
-        <div class="contact-icon">📞</div>
+        <div class="contact-icon ring-icon">📞</div>
         <h3>Direct Contact</h3>
         <div class="contact-details">
           <a href="tel:+234 9020072209" class="contact-link">
